# flask_ims

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
chapter1/: main.py
chapter1/templates/: index.html.jinja2
chapter2/: main.py
chapter2/templates/: dashboard.html.jinja2  index.html.jinja2  login.html.jinja2
chapter3/: main.py
chapter3/templates/: 404.html.jinja2  base.html.jinja2  dashboard.html.jinja2  index.html.jinja2  login.html.jinja2
chapter4/: main.py  user.py
chapter4/templates/: dashboard.html.jinja2
chapter5/: main.py  models.py  user.py
chapter5/templates/: add_item.html.jinja2  dashboard.html.jinja2  items.html.jinja2  users.html.jinja2
chapter6/: db.sqlite3  main.py  models.py  user.py
chapter6/templates/: add_user.html.jinja2  dashboard.html.jinja2  items.html.jinja2  users.html.jinja2
chapter7/: main.py  models.py
chapter7/templates/: dashboard.html.jinja2  users.html.jinja2
