[tool.poetry]
name = "flask-ims"
version = "0.1.0"
description = ""
authors = ["Diwaker Ghimire <dwkrghm@pm.me>"]
readme = "README.md"
packages = [{include = "flask_ims"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
